--- a/Saiyid/Templates/courses.html
+++ b/Saiyid/Templates/courses.html
@@ -49,13 +49,13 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="courses.html">Courses</a></li>
-          <li><a href="trainers.html">Trainers</a></li>
+          <!-- <li><a href="about.html">About</a></li> -->
+          <li><a href="courses.html">Visualizations</a></li>
+          <!-- <li><a href="trainers.html">Dashboard</a></li>
           <li><a href="events.html">Events</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="pricing.html">Pricing</a></li> -->
 
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -71,13 +71,13 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+          </li> -->
+          <!-- <li><a href="contact.html">Contact</a></li>
+        </ul> -->
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="courses.html" class="get-started-btn">Get Started</a>
+      <a href="trainers.html" class="get-started-btn">Dashboard</a>
 
     </div>
   </header><!-- End Header -->
@@ -87,13 +87,13 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs">
       <div class="container">
-        <h2>Courses</h2>
-        <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+        <h2>Charts</h2>
+        <p>The following charts will describe the occurences of Museums, Aquariums, Zoos, and Neture Centers and their relationships with other statistics! </p>
       </div>
     </div><!-- End Breadcrumbs -->
 
     <!-- ======= Courses Section ======= -->
-    <section id="courses" class="courses">
+    <!-- <section id="courses" class="courses">
       <div class="container" data-aos="fade-up">
 
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
@@ -122,9 +122,9 @@
                 </div>
               </div>
             </div>
-          </div> <!-- End Course Item-->
+          </div> End Course Item-->
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="course-item">
               <img src="assets/img/course-2.jpg" class="img-fluid" alt="...">
               <div class="course-content">
@@ -148,9 +148,9 @@
                 </div>
               </div>
             </div>
-          </div> <!-- End Course Item-->
+          </div> End Course Item-->
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="course-item">
               <img src="assets/img/course-3.jpg" class="img-fluid" alt="...">
               <div class="course-content">
@@ -174,17 +174,17 @@
                 </div>
               </div>
             </div>
-          </div> <!-- End Course Item-->
-
+          </div> End Course Item-->
+<!-- 
         </div>
 
-      </div>
-    </section><!-- End Courses Section -->
+      </div> -->
+    <!-- </section><!-- End Courses Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <!-- <footer id="footer">
 
     <div class="footer-top">
       <div class="container">
@@ -233,7 +233,7 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="container d-md-flex py-4">
 
