--- a/Saiyid/Templates/index.html
+++ b/Saiyid/Templates/index.html
@@ -77,7 +77,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="courses.html" class="get-started-btn">Dashboard</a>
+      <a href="trainers.html" class="get-started-btn">Dashboard</a>
 
     </div>
   </header><!-- End Header -->
@@ -85,9 +85,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Museums, Zoos, Aquariums<br>Nature Center</h1>
+      <h1>Museums, Aquariums, Zoos<br>Environment</h1>
       <h2>Find out where you'll go next!</h2>
-      <a href="courses.html" class="btn-get-started">Get Started</a>
+      <a href="trainers.html" class="btn-get-started">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
@@ -99,23 +99,19 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/marker.png" class="img-fluid" alt="">
+            <img src="assets/img/us.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Now is the time to explore the wonders of the United States!</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              From a selection of thousands of sites, each everyone of us has the opportunity to emerge ourselves in the coutnries rich history and nature.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> Museums</li>
+              <li><i class="bi bi-check-circle"></i> Aquariums</li>
+              <li><i class="bi bi-check-circle"></i> Zoos</li>
+              <li><i class="bi bi-check-circle"></i> Nature Centers</li>
             </ul>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            </p>
-
           </div>
         </div>
 
