--- a/Valense/Templates/index.html
+++ b/Valense/Templates/index.html
@@ -100,18 +100,18 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/marker.png" class="img-fluid" alt="">
+            <img src="assets/img/us.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Now is the time to explore the wonders of the United States!</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              From a selection of thousands of sites, each everyone of us has the opportunity to emerge ourselves in the coutnries rich history and nature.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> Museums</li>
+              <li><i class="bi bi-check-circle"></i> Aquariums</li>
+              <li><i class="bi bi-check-circle"></i> Zoos</li>
+              <li><i class="bi bi-check-circle"></i> Nature Centers</li>
             </ul>
             <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
@@ -136,17 +136,17 @@
 
           <div class="col-lg-3 text-center">
             <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Aquariums</p>
+            <p>Aquariums and zoos</p>
           </div>
 
-          <div class="col-lg-3 text-center">
+          <!--<div class="col-lg-3 text-center">
             <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>
             <p>Zoo</p>
-          </div>
+          </div>-->
 
           <div class="col-lg-3 text-center">
             <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Nature Center</p>
+            <p>Nature Centers</p>
           </div>
 
         </div>
