--- a/Vasantha/Maze_Dashboard/static/css/style.css
+++ b/Vasantha/Maze_Dashboard/static/css/style.css
@@ -1,14 +1,25 @@
 
+
   .container_bg_color{
 
-    background-color:#8c8f9463;
+    background-color:#E7EBC5;
     
-    padding:2rem;
-    border-radius: 0.4rem;
+    padding:1rem;
+    /* border-radius: 0.4rem; */
     font-size: 0.8rem;
     font-weight: 600;
   }
 
+  .container_plot
+  {
+
+    background-color:#E7EBC5;
+    
+    padding:0.8rem;
+    /* border-radius: 0.4rem; */
+
+  }
+  
   .text_align_center{
     text-align: center;
   }
@@ -37,11 +48,11 @@
     padding-right: 0.8rem;
   }
   
-  a:link , a:visited ,a:hover ,a:active 
+  /* a:link , a:visited ,a:hover ,a:active 
   {
     color:#fff;
     text-decoration: none;
-  }
+  } */
 
   .header_padding
   {
@@ -57,3 +68,17 @@
     padding-left: 0rem;
     padding-right: 0rem;
   }
+
+  .myDiv {
+    border: 5px outset red;
+    background-color: lightblue;    
+    text-align: center;
+  }
+
+  body, .bg-light{
+    background-color: #fff8ed !important;
+  }
+  /* form{
+    font-size: 0.8rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  } */
