--- a/Vasantha/Maze_Dashboard/templates/index.html
+++ b/Vasantha/Maze_Dashboard/templates/index.html
@@ -32,14 +32,14 @@
             <li class="nav-item">
               <a class="nav-link" href="/dashboard">Dashboard</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="/maps">Interactive Maps</a>
-            </li>
+            </li> -->
           </ul>
-          <form class="d-flex">
+          <!-- <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          </form> -->
         </div>
       
     </nav>
