--- a/Vasantha/Maze_Dashboard/templates/dashboard.html
+++ b/Vasantha/Maze_Dashboard/templates/dashboard.html
@@ -185,9 +185,10 @@
   <!-- ////////////////////////Dashborad PlOT 2 ends/////////////////////////////// -->
 <!-- ////////////////////////Dashborad PlOT 2 /////////////////////////////// -->
 <div class="row justify-content-center container_plot">
-  <div class="col-lg-12 col-md-12 col-sm-12">
+  <div class="col-lg-7 col-md-7 col-sm-7">
     <div id="plot_revenue"></div>
   </div>
+  <div class="col-lg-5 col-md-5 col-sm-5"></div>
 </div>
 <!-- ////////////////////////Dashborad PlOT 2 ends/////////////////////////////// -->  
 </div>
