--- a/templates/index.html
+++ b/templates/index.html
@@ -67,21 +67,21 @@
           <image src="{{url_for('static',filename = 'images/museum.jpg')}}" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>MUSEUMS</h1>
-            <p>Some representative placeholder content for the first slide.</p>
+            <!-- <p>Some representative placeholder content for the first slide.</p> -->
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
           <image src="{{url_for('static',filename = 'images/zoo.jpg')}}" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>ZOOS</h1>
-            <p>Some representative placeholder content for the second slide.</p>
+            <!-- <p>Some representative placeholder content for the second slide.</p> -->
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
           <image src="{{url_for('static',filename = 'images/aquarium.jpg')}}" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>AQUARIUMS</h1>
-            <p>Some representative placeholder content for the third slide.</p>
+            <!-- <p>Some representative placeholder content for the third slide.</p> -->
           </div>
         </div>
       </div>
