--- a/Vasantha/Maze_Dashboard/templates/dashboard.html
+++ b/Vasantha/Maze_Dashboard/templates/dashboard.html
@@ -176,21 +176,17 @@
 <!-- </form>   -->
 <!-- ////////////////////////Dashborad Leaflet 1 ends/////////////////////////////// -->
 <div class="container">
-<!-- ////////////////////////Dashborad PlOT 2 /////////////////////////////// -->
-<!-- <div class="row justify-content-center container_plot">
-  <div class="col-lg-12 col-md-12 col-sm-12">
-    <div id="plot_pie"></div>
-  </div>
-</div> -->
-  <!-- ////////////////////////Dashborad PlOT 2 ends/////////////////////////////// -->
-<!-- ////////////////////////Dashborad PlOT 2 /////////////////////////////// -->
+<!-- ////////////////////////Dashborad PlOT 2 /////////////////////////////// 9/10/2021-->
 <div class="row justify-content-center container_plot">
-  <div class="col-lg-7 col-md-7 col-sm-7">
+  <div class="col-lg-6 col-md-6 col-sm-12">
     <div id="plot_revenue"></div>
   </div>
-  <div class="col-lg-5 col-md-5 col-sm-5"></div>
+  <div class="col-lg-6 col-md-6 col-sm-12">
+    <div id="plot_pie"></div>
+  </div>
+  
 </div>
-<!-- ////////////////////////Dashborad PlOT 2 ends/////////////////////////////// -->  
+<!-- ////////////////////////Dashborad PlOT 2 ends/////////////////////////////// 9/10/2021 -->  
 </div>
 <br />
 <!-- ////////////////////////Dashborad Leaflet 2 /////////////////////////////// -->
