--- a/templates/dashboard1.html
+++ b/templates/dashboard1.html
@@ -176,7 +176,7 @@
 <!-- </form>   -->
 <!-- ////////////////////////Dashborad Leaflet 1 ends/////////////////////////////// -->
 <div class="container">
-<!-- ////////////////////////Dashborad PlOT 2 /////////////////////////////// 9/10/2021-->
+<!-- ////////////////////////Dashborad PlOT 2 and 3/////////////////////////////// 9/10/2021-->
 <div class="row justify-content-center container_plot">
   <div class="col-lg-6 col-md-6 col-sm-12">
     <div id="plot_revenue"></div>
@@ -186,7 +186,7 @@
   </div>
   
 </div>
-<!-- ////////////////////////Dashborad PlOT 2 ends/////////////////////////////// 9/10/2021 -->  
+<!-- ////////////////////////Dashborad PlOT 2 and 3 ends/////////////////////////////// 9/10/2021 -->   
 </div>
 <br />
 <!-- ////////////////////////Dashborad Leaflet 2 /////////////////////////////// -->
