--- a/Vasantha/Maze_Dashboard/templates/dashboard.html
+++ b/Vasantha/Maze_Dashboard/templates/dashboard.html
@@ -137,7 +137,7 @@
     <div id="map_cont" style="align-items: center;">
       
       <center>  
-        <input type="button" id="but2" name="but2" value=" Only show ">
+        
         <input type="checkbox" id="mtype" name="mtype" value='1'> <img src="https://img.icons8.com/ios-filled/100/000000/archeology.png" alt="HISTORY MUSEUM" title="HISTORY MUSEUM" width="1%">
         HISTORY MUSEUM
         &nbsp;&nbsp;&nbsp;&nbsp;
@@ -168,7 +168,7 @@
         <input type="checkbox" id="mtype" name="mtype" value='10'><img src="https://img.icons8.com/ios-filled/100/000000/seahorse.png" width="1%" alt="AQUARIUM" title="AQUARIUM"> 
         AQUARIUM
         
-        
+        &nbsp;&nbsp;&nbsp;&nbsp;<input type="button" id="but2" name="but2" value=" Display"> &nbsp;&nbsp;&nbsp;&nbsp;
       </center>
 
     <div id="map"></div>
