--- a/Vasantha/Maze_Dashboard/templates/dashboard.html
+++ b/Vasantha/Maze_Dashboard/templates/dashboard.html
@@ -180,6 +180,9 @@
 <div class="row justify-content-center container_plot">
   <div class="col-lg-6 col-md-6 col-sm-12">
     <div id="plot_revenue"></div>
+    <button type="button" class="btn btn-scdry" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Click for museum list
+    </button>  
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12">
     <div id="plot_pie"></div>
@@ -187,6 +190,34 @@
   
 </div>
 <!-- ////////////////////////Dashborad PlOT 2 ends/////////////////////////////// 9/10/2021 -->  
+
+<!-- ####################################-->
+          <!-- Button trigger modal -->
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5>Museum List Sorted By Highest Revenue
+                  </h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="table-responsive-md table-responsive-lg" style="font-size: x-small;">
+                  {{ top_reve_data_temp | safe }}
+                </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-scdry" data-bs-dismiss="modal">Close</button>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <br />
+                    <!-- ####################################-->
+
 </div>
 <br />
 <!-- ////////////////////////Dashborad Leaflet 2 /////////////////////////////// -->
