--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -223,7 +223,11 @@
 <br />
 <!-- ////////////////////////Dashborad Leaflet 2 /////////////////////////////// -->
 <div id="map_cont" style="align-items: center;">
-  <center><H3>Composition of Museums Across USA</H3></center>
+  <center><H3>Composition of Museums Across USA</H3>
+    <p>Map below displays density of each type/category of museum per state.
+       Museum type/category is represented by a color. 
+       The larger the size of the circle of that category's color, the more museums of that type/category exist in that state.</p></center>
+    <br />
   <br />
 <div id="map2"></div>
 </div>
