--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -225,7 +225,7 @@
 <div id="map_cont" style="align-items: center;">
   <center><H3>Composition of Museums Across USA</H3>
     <p>Map below displays density of each type/category of museum per state.
-       Museum type/category is represented by a color. 
+       Museum category is represented by a color. <br>
        The larger the size of the circle of that category's color, the more museums of that type/category exist in that state.</p></center>
     <br />
   <br />
